Update table of contents

--- a/README.org
+++ b/README.org
@@ -9,49 +9,57 @@ Install all your applications and configure everything the way you like it with 
 
 ** Table of Contents
    :PROPERTIES:
-   :TOC:      this
+   :TOC:      :include all
    :END:
-    - [[#tested-on][Tested on]]
-    - [[#configuring-machine][Configuring machine]]
-      - [[#install-developer-tools-xcode-select][Install Developer Tools (xcode-select)]]
-      - [[#clone-repository][Clone repository]]
-      - [[#create-an-ansible-vault-password][Create an Ansible Vault password]]
-      - [[#encrypted-files-using-ansible-vault][Encrypted files (using Ansible Vault)]]
-      - [[#prepare-machine-to-run-the-ansible-playbooks][Prepare machine to run the Ansible playbooks]]
-      - [[#provision-machine][Provision machine]]
-      - [[#manual-steps-post-make-converge][Manual steps post make converge]]
-        - [[#httpmizagecomhelpaccessibilityhtmlenable-assistive-access-for-divvy][Enable assistive access for Divvy]]
-        - [[#enable-assistive-access-for-terminal][Enable assistive access for Terminal]]
-        - [[#enable-assistive-access-for-emacs][Enable assistive access for Emacs]]
-        - [[#set-up-spotify-lastfm-connect][Set up Spotify Last.fm connect]]
-    - [[#roles][Roles]]
-      - [[#installs][Installs]]
-        - [[#desktop-applications][Desktop Applications]]
-        - [[#text-editors][Text Editors]]
-        - [[#communication][Communication]]
-        - [[#configuration][Configuration]]
-        - [[#multimedia][Multimedia]]
-        - [[#browser-plugins][Browser Plugins]]
-        - [[#programming-languages][Programming Languages]]
-        - [[#virtualization-provisioning-containers-and-system-tools][Virtualization, Provisioning, Containers and System Tools]]
-        - [[#package-managers-and-build-tools][Package Managers and Build Tools]]
-        - [[#shell][Shell]]
-        - [[#programming-utilities][Programming Utilities]]
-        - [[#security][Security]]
-        - [[#gnu-command-line-tools][GNU Command Line Tools]]
-        - [[#data-systems][Data Systems]]
-        - [[#configuration-monitoring-and-debugging-tag-observability][Configuration, Monitoring and Debugging (tag: observability)]]
-        - [[#document-processors-and-plotting][Document Processors and Plotting]]
-        - [[#markup-tools][Markup Tools]]
-        - [[#command-line-tools][Command line tools]]
-        - [[#miscellaneous][Miscellaneous]]
-      - [[#configures][Configures]]
-        - [[#passwordless-sudo][Passwordless sudo]]
-        - [[#remaps-caps-lock-to-control][Remaps Caps-Lock to Control]]
-        - [[#puts-ssh-keys-in-place][Puts SSH keys in place]]
-        - [[#makes-google-chrome-the-default-browser][Makes Google Chrome the default browser]]
-    - [[#author][Author]]
-    - [[#license][License]]
+   :CONTENTS:
+- [[#table-of-contents][Table of Contents]]
+- [[#tested-on][Tested on]]
+- [[#bootstrap-machine-make-bootstrap][Bootstrap machine (make bootstrap)]]
+  - [[#install-developer-tools-xcode-select][Install Developer Tools (xcode-select)]]
+  - [[#clone-repository][Clone repository]]
+  - [[#give-terminaliterm2emacsetc-assistive-access][Give Terminal/iTerm2/Emacs/etc. assistive access]]
+  - [[#secrets][Secrets]]
+  - [[#prepare-machine-to-run-the-ansible-playbooks][Prepare machine to run the Ansible playbooks]]
+- [[#configure-machine-make-converge][Configure machine (make converge)]]
+  - [[#provision-machine][Provision machine]]
+  - [[#manual-steps-post-make-converge][Manual steps post make converge]]
+    - [[#change-keyboard-layout-to-us-international][Change keyboard layout to U.S. international]]
+    - [[#istat-menus][iStat Menus]]
+    - [[#pdf-expert][PDF Expert]]
+    - [[#bettertouchtool][BetterTouchTool]]
+    - [[#terminal][Terminal]]
+      - [[#preferences--profiles--pro--font][Preferences > Profiles > Pro > Font]]
+    - [[#system-preferences--security--privacy--privacy--accessibility][System Preferences > Security & Privacy > Privacy >]]
+    - [[#system-preferences--keyboard--shortcuts--mission-control][System Preferences > Keyboard > Shortcuts > Mission Control]]
+- [[#roles][Roles]]
+  - [[#installs][Installs]]
+    - [[#desktop-applications][Desktop Applications]]
+    - [[#text-editors][Text Editors]]
+    - [[#configuration][Configuration]]
+    - [[#programming-languages][Programming Languages]]
+    - [[#multimedia][Multimedia]]
+    - [[#fonts][Fonts]]
+    - [[#browser-plugins][Browser Plugins]]
+    - [[#virtualization-provisioning-containers-and-system-tools][Virtualization, Provisioning, Containers and System Tools]]
+    - [[#package-managers-and-build-tools][Package Managers and Build Tools]]
+    - [[#shell][Shell]]
+    - [[#programming-utilities][Programming Utilities]]
+    - [[#data-systems][Data Systems]]
+    - [[#configuration-monitoring-and-debugging][Configuration, Monitoring and Debugging]]
+    - [[#document-processors-and-plotting][Document Processors and Plotting]]
+    - [[#markup-tools][Markup Tools]]
+    - [[#command-line-tools][Command line tools]]
+    - [[#security][Security]]
+    - [[#gnu-command-line-tools][GNU Command Line Tools]]
+    - [[#miscellaneous][Miscellaneous]]
+  - [[#configures][Configures]]
+    - [[#makes-google-chrome-the-default-browser][Makes Google Chrome the default browser]]
+    - [[#passwordless-sudo][Passwordless sudo]]
+    - [[#puts-ssh-keys-in-place][Puts SSH keys in place]]
+    - [[#remaps-caps-lock-to-control][Remaps Caps-Lock to Control]]
+- [[#author][Author]]
+- [[#license][License]]
+   :END:
 
 ** Tested on
    I've been using =macbook-playbook= since 2013. I've used it on at least eight
